--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_PIZZA_SERVICE_URL=https://pizza-factory.cs329.click
+VITE_PIZZA_SERVICE_URL=http://localhost:3000
 VITE_PIZZA_FACTORY_URL=https://pizza-factory.cs329.click
 
 //so once I think I've got the whole backend mocked up, then 
